--- a/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
+++ b/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,6 @@
     "local_simulator = BraketLocalBackend()\n",
     "sv1 = provider.get_backend(\"SV1\")\n",
     "aria = provider.get_backend(\"Aria 1\")\n",
-    "harmony = provider.get_backend(\"Harmony\")\n",
     "statevector_simulator = StatevectorSimulator()\n",
     "\n",
     "# Setup inicial do problema\n",
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -729,8 +728,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m j_sv1_Estimator_circuito \u001b[38;5;241m=\u001b[39m run_estimator_aws(circuito, es_problem, sv1, \u001b[38;5;241m2000\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[6], line 26\u001b[0m, in \u001b[0;36mrun_estimator_aws\u001b[0;34m(circuit, driver, backend, shots, mapper)\u001b[0m\n\u001b[1;32m     23\u001b[0m estimator\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mdefault_shots \u001b[38;5;241m=\u001b[39m shots\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m#job = estimator.run(circuit, mapper.map(hamiltoniano))\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m job \u001b[38;5;241m=\u001b[39m estimator\u001b[38;5;241m.\u001b[39mrun([(circuit, mapper\u001b[38;5;241m.\u001b[39mmap(hamiltoniano), [])])\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m job\n",
+      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m j_sv1_Estimator_circuito \u001b[38;5;241m=\u001b[39m run_estimator_aws(circuito, es_problem, sv1, \u001b[38;5;241m2000\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[31], line 26\u001b[0m, in \u001b[0;36mrun_estimator_aws\u001b[0;34m(circuit, driver, backend, shots, mapper)\u001b[0m\n\u001b[1;32m     23\u001b[0m estimator\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mdefault_shots \u001b[38;5;241m=\u001b[39m shots\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m#job = estimator.run(circuit, mapper.map(hamiltoniano))\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m job \u001b[38;5;241m=\u001b[39m estimator\u001b[38;5;241m.\u001b[39mrun([(circuit_1, mapper\u001b[38;5;241m.\u001b[39mmap(hamiltoniano), [])])\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m job\n",
       "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/qiskit_ibm_runtime/estimator.py:151\u001b[0m, in \u001b[0;36mEstimatorV2.run\u001b[0;34m(self, pubs, precision)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Submit a request to the estimator primitive.\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \n\u001b[1;32m    139\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    148\u001b[0m \n\u001b[1;32m    149\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    150\u001b[0m coerced_pubs \u001b[38;5;241m=\u001b[39m [EstimatorPub\u001b[38;5;241m.\u001b[39mcoerce(pub, precision) \u001b[38;5;28;01mfor\u001b[39;00m pub \u001b[38;5;129;01min\u001b[39;00m pubs]\n\u001b[0;32m--> 151\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_run(coerced_pubs)\n",
       "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/qiskit_ibm_runtime/base_primitive.py:185\u001b[0m, in \u001b[0;36mBasePrimitiveV2._run\u001b[0;34m(self, pubs)\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service, QiskitRuntimeService):\n\u001b[1;32m    177\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service\u001b[38;5;241m.\u001b[39mrun(\n\u001b[1;32m    178\u001b[0m         program_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_program_id(),\n\u001b[1;32m    179\u001b[0m         options\u001b[38;5;241m=\u001b[39mruntime_options,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    182\u001b[0m         result_decoder\u001b[38;5;241m=\u001b[39mDEFAULT_DECODERS\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_program_id()),\n\u001b[1;32m    183\u001b[0m     )\n\u001b[0;32m--> 185\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service\u001b[38;5;241m.\u001b[39mrun(\n\u001b[1;32m    186\u001b[0m     program_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_program_id(),  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[1;32m    187\u001b[0m     options\u001b[38;5;241m=\u001b[39mruntime_options,\n\u001b[1;32m    188\u001b[0m     inputs\u001b[38;5;241m=\u001b[39mprimitive_inputs,\n\u001b[1;32m    189\u001b[0m )\n",
       "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/qiskit_ibm_runtime/fake_provider/local_service.py:73\u001b[0m, in \u001b[0;36mQiskitRuntimeLocalService.run\u001b[0;34m(self, program_id, inputs, options)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Execute the runtime program.\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \n\u001b[1;32m     58\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;124;03m    NotImplementedError: If using V2 primitives.\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(options, Dict):\n\u001b[0;32m---> 73\u001b[0m     qrt_options \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mdeepcopy(options)\n\u001b[1;32m     74\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     75\u001b[0m     qrt_options \u001b[38;5;241m=\u001b[39m asdict(options)\n",
@@ -790,9 +789,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m task_id \u001b[38;5;241m=\u001b[39m j_sv1_Estimator_circuito\u001b[38;5;241m.\u001b[39mjob_id()\n\u001b[0;32m----> 3\u001b[0m AwsQuantumTask(arn\u001b[38;5;241m=\u001b[39mtask_id)\u001b[38;5;241m.\u001b[39mresult()\n",
+      "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/braket/aws/aws_quantum_task.py:264\u001b[0m, in \u001b[0;36mAwsQuantumTask.__init__\u001b[0;34m(self, arn, aws_session, poll_timeout_seconds, poll_interval_seconds, logger, quiet)\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Initializes an `AwsQuantumTask`.\u001b[39;00m\n\u001b[1;32m    238\u001b[0m \n\u001b[1;32m    239\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    261\u001b[0m \u001b[38;5;124;03m    GateModelQuantumTaskResult(...)\u001b[39;00m\n\u001b[1;32m    262\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    263\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_arn: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m arn\n\u001b[0;32m--> 264\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_aws_session: AwsSession \u001b[38;5;241m=\u001b[39m aws_session \u001b[38;5;129;01mor\u001b[39;00m AwsQuantumTask\u001b[38;5;241m.\u001b[39m_aws_session_for_task_arn(\n\u001b[1;32m    265\u001b[0m     task_arn\u001b[38;5;241m=\u001b[39marn\n\u001b[1;32m    266\u001b[0m )\n\u001b[1;32m    267\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll_timeout_seconds \u001b[38;5;241m=\u001b[39m poll_timeout_seconds\n\u001b[1;32m    268\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll_interval_seconds \u001b[38;5;241m=\u001b[39m poll_interval_seconds\n",
+      "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/braket/aws/aws_quantum_task.py:286\u001b[0m, in \u001b[0;36mAwsQuantumTask._aws_session_for_task_arn\u001b[0;34m(task_arn)\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[38;5;129m@staticmethod\u001b[39m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_aws_session_for_task_arn\u001b[39m(task_arn: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m AwsSession:\n\u001b[1;32m    280\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Get an AwsSession for the Quantum Task ARN. The AWS session should be in the region of\u001b[39;00m\n\u001b[1;32m    281\u001b[0m \u001b[38;5;124;03m    the quantum task.\u001b[39;00m\n\u001b[1;32m    282\u001b[0m \n\u001b[1;32m    283\u001b[0m \u001b[38;5;124;03m    Returns:\u001b[39;00m\n\u001b[1;32m    284\u001b[0m \u001b[38;5;124;03m        AwsSession: `AwsSession` object with default `boto_session` in quantum task's region.\u001b[39;00m\n\u001b[1;32m    285\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 286\u001b[0m     task_region \u001b[38;5;241m=\u001b[39m task_arn\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m    287\u001b[0m     boto_session \u001b[38;5;241m=\u001b[39m boto3\u001b[38;5;241m.\u001b[39mSession(region_name\u001b[38;5;241m=\u001b[39mtask_region)\n\u001b[1;32m    288\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m AwsSession(boto_session\u001b[38;5;241m=\u001b[39mboto_session)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "task_id = j_sv1_Estimator_circuito.job_id()\n",
     "\n",
@@ -1759,7 +1772,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aws_braket",
+   "display_name": "aws_braket_updated",
    "language": "python",
    "name": "python3"
   },
