--- a/QML/Gabriel/QnKK_1/q-KNN.ipynb
+++ b/QML/Gabriel/QnKK_1/q-KNN.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:07.125060Z",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:07.132246Z",
@@ -129,6 +129,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "cell_id": "1fb20b64a8e141de96dbd4f089c500cf",
@@ -154,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:09.321123Z",
@@ -185,17 +211,17 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fb42823b4d0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fb7b7b76f90>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f488e3bfaeb64bb79f4611c43d0b5f94",
+       "model_id": "7107bc2e7af14248b36e7802b8c1e3ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:09.321334Z",
@@ -290,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:11.370634Z",
@@ -321,17 +347,17 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fb428300350>"
+       "<seaborn.axisgrid.PairGrid at 0x7fb7a8106720>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3dbf2dcd4954e8a95b8723507206df0",
+       "model_id": "ccbbb446054742e5aba434013089ba00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:11.371446Z",
@@ -429,19 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_index = int(np.random.rand()*len(X_test)) \n",
-    "phi_test = X_test[test_index]\n",
-    "\n",
-    "print(phi_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-09T20:36:11.378041Z",
@@ -478,6 +492,75 @@
     "\n",
     "# Validate the statevector\n",
     "print('Valid statevector: ', Statevector(phi).is_valid())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66666667, 0.41666667, 0.6779661 , 0.66666667],\n",
+       "       [0.19444444, 0.58333333, 0.10169492, 0.125     ],\n",
+       "       [0.30555556, 0.41666667, 0.59322034, 0.58333333],\n",
+       "       [0.41666667, 0.29166667, 0.69491525, 0.75      ],\n",
+       "       [0.44444444, 0.41666667, 0.54237288, 0.58333333],\n",
+       "       [0.05555556, 0.125     , 0.05084746, 0.08333333],\n",
+       "       [0.61111111, 0.33333333, 0.61016949, 0.58333333],\n",
+       "       [0.41666667, 0.29166667, 0.52542373, 0.375     ],\n",
+       "       [0.16666667, 0.45833333, 0.08474576, 0.04166667],\n",
+       "       [0.38888889, 0.41666667, 0.54237288, 0.45833333],\n",
+       "       [0.25      , 0.29166667, 0.49152542, 0.54166667],\n",
+       "       [0.69444444, 0.5       , 0.83050847, 0.91666667],\n",
+       "       [0.66666667, 0.20833333, 0.81355932, 0.70833333],\n",
+       "       [0.19444444, 0.54166667, 0.06779661, 0.04166667],\n",
+       "       [0.94444444, 0.75      , 0.96610169, 0.875     ],\n",
+       "       [0.13888889, 0.41666667, 0.06779661, 0.08333333],\n",
+       "       [0.5       , 0.41666667, 0.61016949, 0.54166667],\n",
+       "       [0.22222222, 0.75      , 0.10169492, 0.04166667],\n",
+       "       [0.52777778, 0.33333333, 0.6440678 , 0.70833333],\n",
+       "       [0.38888889, 1.        , 0.08474576, 0.125     ],\n",
+       "       [0.72222222, 0.5       , 0.79661017, 0.91666667],\n",
+       "       [0.55555556, 0.54166667, 0.84745763, 1.        ],\n",
+       "       [0.22222222, 0.625     , 0.06779661, 0.04166667],\n",
+       "       [0.66666667, 0.54166667, 0.79661017, 1.        ],\n",
+       "       [0.02777778, 0.41666667, 0.05084746, 0.04166667],\n",
+       "       [0.80555556, 0.5       , 0.84745763, 0.70833333],\n",
+       "       [0.83333333, 0.375     , 0.89830508, 0.70833333],\n",
+       "       [0.55555556, 0.375     , 0.77966102, 0.70833333],\n",
+       "       [0.16666667, 0.66666667, 0.06779661, 0.        ],\n",
+       "       [0.22222222, 0.54166667, 0.11864407, 0.16666667],\n",
+       "       [0.11111111, 0.5       , 0.05084746, 0.04166667],\n",
+       "       [0.33333333, 0.91666667, 0.06779661, 0.04166667],\n",
+       "       [0.44444444, 0.41666667, 0.69491525, 0.70833333],\n",
+       "       [0.36111111, 0.20833333, 0.49152542, 0.41666667],\n",
+       "       [0.25      , 0.625     , 0.08474576, 0.04166667],\n",
+       "       [0.30555556, 0.79166667, 0.05084746, 0.125     ],\n",
+       "       [0.38888889, 0.25      , 0.42372881, 0.375     ],\n",
+       "       [0.55555556, 0.54166667, 0.62711864, 0.625     ],\n",
+       "       [0.13888889, 0.58333333, 0.15254237, 0.04166667],\n",
+       "       [0.19444444, 0.        , 0.42372881, 0.375     ],\n",
+       "       [0.30555556, 0.70833333, 0.08474576, 0.04166667],\n",
+       "       [0.08333333, 0.5       , 0.06779661, 0.04166667],\n",
+       "       [0.94444444, 0.41666667, 0.86440678, 0.91666667],\n",
+       "       [0.22222222, 0.20833333, 0.33898305, 0.41666667],\n",
+       "       [0.5       , 0.41666667, 0.66101695, 0.70833333],\n",
+       "       [0.33333333, 0.25      , 0.57627119, 0.45833333],\n",
+       "       [0.58333333, 0.375     , 0.55932203, 0.5       ],\n",
+       "       [0.47222222, 0.08333333, 0.6779661 , 0.58333333],\n",
+       "       [0.38888889, 0.75      , 0.11864407, 0.08333333],\n",
+       "       [0.36111111, 0.41666667, 0.52542373, 0.5       ]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
    ]
   },
   {
@@ -1233,7 +1316,7 @@
    "createdAt": "2023-10-23T14:16:46.219Z"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aws_braket_updated",
    "language": "python",
    "name": "python3"
   },
@@ -1248,11 +1331,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-   }
   }
  },
  "nbformat": 4,
