--- a/AWS/Gabriel/GroundState10 - Estimator AWS/main.ipynb
+++ b/AWS/Gabriel/GroundState10 - Estimator AWS/main.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,39 +290,38 @@
     "                temp_circuito.sdg(qubit_index)\n",
     "                temp_circuito.h(qubit_index)\n",
     "        \n",
-    "        #temp_circuito.measure_all()       \n",
+    "        temp_circuito.measure_all()       \n",
     "        \n",
     "        job = backend.run(transpile(temp_circuito, backend), shots=shots)\n",
     "        task_id = job.job_id()\n",
-    "        \n",
     "        retrieved_job = backend.retrieve_job(task_id=task_id)\n",
     "        counts = retrieved_job.result().get_counts()\n",
     "        \n",
-    "        term_expectation = 0\n",
+    "        temp_expectation = 0\n",
     "        total_counts = sum(counts.values())\n",
     "        \n",
-    "        for outcome, count in counts.items():\n",
+    "        for resultado, count in counts.items():\n",
     "        \n",
-    "            outcome = outcome[::-1]\n",
+    "            resultado = resultado[::-1]\n",
     "        \n",
-    "            parity = (-1) ** sum(int(outcome[qubit_index]) for qubit_index, pauli in enumerate(pauli_.to_label()) if pauli != 'I')\n",
-    "            term_expectation += parity * (count / total_counts)\n",
+    "            paridade = (-1) ** sum(int(resultado[qubit_index]) for qubit_index, pauli in enumerate(pauli_.to_label()) if pauli != 'I')\n",
+    "            temp_expectation += paridade * (count / total_counts)\n",
     "        \n",
-    "        valor_esperado_0 += coeff.real * term_expectation  \n",
+    "        valor_esperado_0 += coeff.real * temp_expectation  \n",
     "    \n",
     "    return valor_esperado_0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Refined Custom Estimator Value: 0.486328125\n",
+      "Refined Custom Estimator Value: 0.47265625\n",
       "EstimatorV2 Value: 0.4999999999999999\n"
      ]
     }
@@ -349,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +373,7 @@
     }
    ],
    "source": [
-    "expectation_value_sv1 = refined_estimate_expectation_value(circuito_sv1, mapper.map(es_problem.second_q_ops()[0]), sv1, shots=1024)\n",
+    "expectation_value_sv1 = valor_esperado(circuito_sv1, mapper.map(es_problem.second_q_ops()[0]), sv1, shots=1024)\n",
     "\n",
     "expectation_value_Aer_local = run_estimator_aer(circuito_sv1, es_problem)\n",
     "\n",
@@ -449,61 +448,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit import QuantumCircuit, transpile\n",
-    "from qiskit.quantum_info import SparsePauliOp\n",
-    "import numpy as np\n",
-    "\n",
-    "def valor_esperado(circuit: QuantumCircuit, observable: SparsePauliOp, backend, shots=1024):\n",
-    "\n",
-    "    expectation_value = 0\n",
-    "\n",
-    "    for pauli_term, coeff in zip(observable.paulis, observable.coeffs):\n",
-    "        \n",
-    "        term_circuit = circuit.copy()\n",
-    "\n",
-    "        for qubit_index, pauli in enumerate(pauli_term.to_label()):\n",
-    "\n",
-    "            if pauli == 'X':\n",
-    "\n",
-    "                term_circuit.h(qubit_index)  \n",
-    "\n",
-    "            elif pauli == 'Y':\n",
-    "\n",
-    "                term_circuit.sdg(qubit_index)\n",
-    "                term_circuit.h(qubit_index)\n",
-    "        \n",
-    "        term_circuit.measure_all()       \n",
-    "        \n",
-    "        transpiled_circuit = transpile(term_circuit, backend)\n",
-    "        \n",
-    "        job = backend.run(transpiled_circuit, shots=shots)\n",
-    "        task_id = job.job_id()\n",
-    "        \n",
-    "        retrieved_job = backend.retrieve_job(task_id=task_id)\n",
-    "        counts = retrieved_job.result().get_counts()\n",
-    "        \n",
-    "        term_expectation = 0\n",
-    "        total_counts = sum(counts.values())\n",
-    "        \n",
-    "        for outcome, count in counts.items():\n",
-    "        \n",
-    "            outcome = outcome[::-1]\n",
-    "            \n",
-    "        \n",
-    "            parity = (-1) ** sum(int(outcome[qubit_index]) for qubit_index, pauli in enumerate(pauli_term.to_label()) if pauli != 'I')\n",
-    "            term_expectation += parity * (count / total_counts)\n",
-    "        \n",
-    "        expectation_value += coeff.real * term_expectation  \n",
-    "    \n",
-    "    return expectation_value\n"
-   ]
   }
  ],
  "metadata": {
